FIrst attempts to read database in allotted time

--- a/Geobase/appsettings.json
+++ b/Geobase/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "DatabaseSettings": {
+    "AbsoluteFilePath": "D:\\Dev\\MQ_Test\\Geobase\\Database\\geobase.dat"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
