fixed database path discovery

--- a/Geobase/appsettings.json
+++ b/Geobase/appsettings.json
@@ -1,6 +1,6 @@
 {
   "DatabaseSettings": {
-    "AbsoluteFilePath": "D:\\Dev\\MQ_Test\\Geobase\\Database\\geobase.dat"
+    "RelativeFilePath": "Database\\geobase.dat"
   },
   "Logging": {
     "LogLevel": {
