--- a/Geobase/Geobase.csproj
+++ b/Geobase/Geobase.csproj
@@ -33,4 +33,10 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Database\geobase.dat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
